--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -37,6 +39,13 @@
         <service
             android:name=".HomeButtonService"
             android:enabled="true" />
+        <service
+            android:name=".ScreenOnOffService"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.baronkiko.launcherhijack.ScreenOnOffService" />
+            </intent-filter>
+        </service>
 
         <receiver android:name=".BroadcastReceiverOnBootComplete">
             <intent-filter>
@@ -47,6 +56,6 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity"/>
     </application>
 </manifest>
