--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".About"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
@@ -28,20 +30,25 @@
         <service
             android:name=".AccServ"
             android:label="To detect home button press"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+            android:stopWithTask="false">
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
+
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
         </service>
         <service
             android:name=".HomeButtonService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:stopWithTask="false" />
         <service
+            android:enabled="true"
             android:name=".ScreenOnOffService"
-            android:enabled="true">
+            android:exported="false"
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="com.baronkiko.launcherhijack.ScreenOnOffService" />
             </intent-filter>
@@ -50,12 +57,15 @@
         <receiver android:name=".BroadcastReceiverOnBootComplete">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".SettingsActivity" />
     </application>
+
 </manifest>
